# PyDM

./: .gitignore  LICENSE  README.md  info.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/pydm/: __init__.py
src/pydm/cli/: main.py
src/pydm/core/: downloader.py  models.py
src/pydm/utils/: file_ops.py
tests/: test_downloader.py
